<resources>
    <string name="app_name">Dev Storage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="storage_fragment">Storage</string>
    <string name="title_activity_settings2">SettingsActivity2</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="theme">Theme</string>
    <string name="theme_chooser_button">Theme chooser</string>
    <string name="works_sort_by">Works sort by:</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="date">Date</string>
    <string name="storage_sort_by">Storage sort by:</string>
    <string name="amount">Amount</string>
    <string name="unit">Unit</string>
    <string name="delete_data">Delete data</string>
    <string name="delete_all_works">Delete All Works</string>
    <string name="delete_all_storage_items">Delete All Storage Items</string>
    <string name="add_storage_item">Add Storage Item</string>
    <string name="add_work">Add Work</string>
    <string name="description">Description</string>
    <string name="item_adder">Item adder</string>
    <string name="add">Add</string>
    <string name="need_to_by">Need To By</string>
    <string name="update">Update</string>
    <string name="item_options">Item options</string>
    <string name="done">Done</string>
    <string name="materials">Materials</string>
    <string name="work_options">Work options</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="storage">Storage</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="work_name">Work name</string>
    <string name="item_name">Item name</string>
    <string name="home_label">Home</string>
    <string name="works_label">Works</string>
    <string name="storage_label">Storage</string>
    <string name="nem_item_label">Nem Item</string>
    <string name="update_item_label">Update Item</string>
    <string name="new_work_label">New Work</string>
    <string name="update_work_label">Update Work</string>
</resources>