<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.update.UpdateWorkFragment"
    android:id="@+id/fgUpdateWork"
    android:padding="10dp">

    <EditText
        android:id="@+id/etUpdateWorkAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:minHeight="48dp"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etUpdateWorkDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUpdateWorkAddress" />

    <EditText
        android:id="@+id/etUpdateWorkName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:minHeight="48dp"
        android:hint="@string/work_name"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUpdateWorkDate" />

    <EditText
        android:id="@+id/etUpdateWorkDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:minHeight="48dp"
        android:gravity="start|top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUpdateWorkName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUpdateWorkDescription"
        android:id="@+id/llUpdateItem"
        android:weightSum="20">

            <AutoCompleteTextView
                android:id="@+id/etUpdateWorkStorageItemName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:minHeight="48dp"
                android:hint="@string/item_name"
                android:layout_weight="8" />

            <EditText
                android:id="@+id/etUpdateWorkStorageItemAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:ems="10"
                android:minHeight="48dp"
                android:inputType="number"
                android:hint="@string/amount" />

            <EditText
                android:id="@+id/etUpdateWorkStorageItemUnit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/unit"
                android:inputType="text"
                android:minHeight="48dp" />

        <ImageButton
            android:layout_weight="2"
            android:id="@+id/btnUpdateWorkAddItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/item_adder"
            android:src="@drawable/baseline_add_24" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvUpdateMaterials"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/item_storage_list"
        app:layout_constraintBottom_toTopOf="@+id/btnUpdateWork"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llUpdateItem" />

    <Button
        android:id="@+id/btnUpdateWork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>