<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="10">

    <TextView
        android:id="@+id/tvWorkItemName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:text="@string/name" />

    <TextView
        android:id="@+id/tvWorkItemAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textAlignment="textEnd"
        android:text="@string/amount" />

    <TextView
        android:id="@+id/tvWorkItemUnit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:layout_weight="2"
        android:text="@string/unit" />
</LinearLayout>