<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/cardview_default_elevation"
    android:layout_marginTop="9dp"
    android:layout_marginBottom="1dp"
    android:layout_marginHorizontal="5dp"
    android:padding="5dp"
    app:cardCornerRadius="5dp" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvWorkAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/address"
            app:layout_constraintBottom_toTopOf="@+id/cbDone"
            app:layout_constraintEnd_toStartOf="@+id/tvWorkDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvWorkDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            app:layout_constraintBottom_toTopOf="@+id/cbDone"
            app:layout_constraintEnd_toStartOf="@+id/btnWorkOptions"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvWorkName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btnWorkOptions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWorkAddress" />

        <TextView
            android:id="@+id/tvDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            app:layout_constraintBottom_toBottomOf="@+id/cbDone"
            app:layout_constraintEnd_toStartOf="@+id/cbDone"
            app:layout_constraintTop_toTopOf="@+id/cbDone" />

        <CheckBox
            android:id="@+id/cbDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnWorkOptions" />

        <TextView
            android:id="@+id/tvWorkDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWorkName" />

        <TextView
            android:id="@+id/tvWorkMaterials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/materials"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWorkDescription" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvWorkItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWorkMaterials"
            tools:listitem="@layout/item_work_item_list"
            tools:itemCount="5"/>

        <ImageButton
            android:id="@+id/btnWorkOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:src="@drawable/baseline_more_vert_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/work_options"
            android:background="@android:color/transparent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>