<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="9dp"
    android:layout_marginBottom="1dp"
    android:layout_marginHorizontal="5dp"
    android:padding="5dp"
    app:cardCornerRadius="5dp"
    android:elevation="@dimen/cardview_default_elevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        android:paddingStart="5dp"
        android:weightSum="10">

        <TextView
            android:id="@+id/tvStorageItemName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:layout_gravity="end|center"
            android:text="@string/name" />

        <TextView
            android:id="@+id/tvStorageItemAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:layout_weight="2"
            android:layout_gravity="end|center"
            android:text="@string/amount" />

        <TextView
            android:id="@+id/tvStorageItemUnit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_weight="1"
            android:text="@string/unit"
            android:textAlignment="textEnd" />

        <ImageButton
            android:id="@+id/btnStorageItemOptions"
            android:layout_width="0dp"
            android:minWidth="48dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:contentDescription="@string/item_options"
            app:srcCompat="@drawable/baseline_more_vert_24" />
    </LinearLayout>
</androidx.cardview.widget.CardView>